tests/compile_fail/type_mismatch.sml
val x = 1
val y = 1
val z = x y
